@@ -68,8 +68,7 @@ public class MetalGolemRenderer extends AbstractGolemRenderer<MetalGolemEntity, 
 		super(ctx, new MetalGolemModel(ctx.bakeLayer(GolemEquipmentModels.METALGOLEM)), 0.7F, MetalGolemPartType::values);
 		this.addLayer(new ResizedLayer<>(this, new MetalGolemCrackinessLayer(this)));
 		this.addLayer(new ResizedLayer<>(this, new GolemEquipmentRenderer(this, ctx)));
-		this.addLayer(new ResizedLayer<>(this, new MetalGolemBannerLayer<>(this,
-				ctx.getModelSet(), ctx.getItemInHandRenderer())));
+		this.addLayer(new ResizedLayer<>(this, new MetalGolemBannerLayer<>(this, ctx.getItemInHandRenderer())));
 	}
 
 	protected void setupRotations(MetalGolemEntity entity, PoseStack stack, float v1, float v2, float v3) {
